initial logo concept

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Full Price - Understand the 360° Impact of Your Purchases</title>
+    <title>theFullPrice.com - Understand the 360° Impact of Your Purchases</title>
     <meta name="description" content="Understand the complete financial, environmental, and resource impact of your purchases." />
   </head>
   <body>
